# gedit-plugins

./: CONTRIBUTING.md  Makefile.am  NEWS  README  configure.ac  gedit-plugins.doap
help/: Makefile.am
help/C/: bookmarks.page  character-map.page  git.page  text-size.page  translate.page  zeitgeist-dataprovider.page
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fi/: fi.po
help/hu/: hu.po
help/lv/: lv.po
help/pl/: pl.po
help/sv/: sv.po
help/uk/: uk.po
plugins/: Makefile.am  gpdefs.py.in
plugins/bookmarks/: Makefile.am  gedit-bookmarks-app-activatable.c  gedit-bookmarks-plugin.c  gedit-bookmarks.metainfo.xml.in
plugins/bracketcompletion/: Makefile.am  bracketcompletion.py  gedit-bracketcompletion.metainfo.xml.in
plugins/charmap/: Makefile.am  charmap.plugin.desktop.in.in  gedit-charmap.metainfo.xml.in
plugins/charmap/charmap/: __init__.py  panel.py
plugins/codecomment/: Makefile.am  codecomment.py  gedit-codecomment.metainfo.xml.in
plugins/colorpicker/: Makefile.am  colorpicker.plugin.desktop.in.in  colorpicker.py  gedit-colorpicker.metainfo.xml.in
plugins/colorschemer/: Makefile.am  gedit-colorschemer.metainfo.xml.in
plugins/colorschemer/schemer/: __init__.py
plugins/commander/: Makefile.am  gedit-commander.metainfo.xml.in
plugins/commander/commander/: __init__.py  appactivatable.py  entry.py  info.py  windowactivatable.py  windowhelper.py
plugins/commander/commander/commands/: __init__.py  completion.py  module.py  rollbackimporter.py
plugins/commander/modules/: align.py  edit.py  shell.py
plugins/commander/modules/find/: regex.py
plugins/dashboard/: Makefile.am  gedit-dashboard.metainfo.xml.in
plugins/dashboard/dashboard/: __init__.py  dashboard.py  utils.py
plugins/drawspaces/: Makefile.am  gedit-drawspaces-app-activatable.c  gedit-drawspaces-app-activatable.h  gedit-drawspaces-plugin.c  gedit-drawspaces-view-activatable.c  gedit-drawspaces-window-activatable.c  gedit-drawspaces-window-activatable.h  gedit-drawspaces.metainfo.xml.in  org.gnome.gedit.plugins.drawspaces.gschema.xml  org.gnome.gedit.plugins.drawspaces.gschema.xml.in.in
plugins/emacsyindent/: Makefile.am  TODO  emacsyindent.plugin.desktop.in.in  emacsyindent.py
plugins/emacsyindent/tests/: c-funcs-tabs.actual  c-funcs.actual  c-funcs.expected  c-funcs.input  c-ifs-tabs.actual  c-ifs-tabs.expected  c-ifs.actual  c-ifs.expected  c-ifs.input  python-funcs-tabs.actual  python-funcs-tabs.expected  python-funcs.actual  python-funcs.expected  python-funcs.input  python-ifs-tabs.actual  python-ifs-tabs.expected  python-ifs.actual  python-ifs.expected  python-ifs.input
plugins/findinfiles/: Makefile.am  dialog.ui  dialog.vala  findinfiles.plugin.desktop.in.in  gedit-findinfiles.metainfo.xml.in  job.vala  plugin.vala  result-panel.vala
plugins/git/: Makefile.am  gedit-git.metainfo.xml.in  git.plugin.desktop.in.in
plugins/git/git/: Makefile.am  __init__.py  appactivatable.py  debug.py  viewactivatable.py  windowactivatable.py  workerthread.py
plugins/joinlines/: Makefile.am  gedit-joinlines.metainfo.xml.in  joinlines.py
plugins/multiedit/: Makefile.am  gedit-multiedit.metainfo.xml.in
plugins/multiedit/multiedit/: __init__.py  appactivatable.py  documenthelper.py  signals.py  viewactivatable.py  windowactivatable.py  windowhelper.py
plugins/rpmchangelog/: Makefile.am  gedit-rpmchangelog.metainfo.xml.in  org.gnome.gedit.plugins.rpmchangelog.gschema.xml.in.in  rpmchangelog.plugin.desktop.in.in  rpmchangelog.py
plugins/showtabbar/: gedit-show-tabbar-plugin.c
plugins/smartspaces/: Makefile.am  gedit-smartspaces.metainfo.xml.in  smartspaces.plugin.desktop.in.in  smartspaces.py
plugins/synctex/: Makefile.am  gedit-synctex.metainfo.xml.in  synctex.plugin.desktop.in.in
plugins/synctex/synctex/: __init__.py  synctex.py
plugins/terminal/: Makefile.am  gedit-terminal.metainfo.xml.in  org.gnome.gedit.plugins.terminal.gschema.xml  org.gnome.gedit.plugins.terminal.gschema.xml.in.in  terminal.plugin.desktop.in.in  terminal.py
plugins/textsize/: Makefile.am  gedit-textsize.metainfo.xml.in
plugins/textsize/textsize/: __init__.py  viewactivatable.py
plugins/translate/: Makefile.am  gedit-translate.metainfo.xml.in  org.gnome.gedit.plugins.translate.gschema.xml  org.gnome.gedit.plugins.translate.gschema.xml.in  translate.plugin.desktop.in.in
plugins/translate/tests/: testapertium.py
plugins/translate/translate/: __init__.py  apertium.py  preferences.py  settings.py
plugins/translate/translate/backends/: apertium.py  translator.py
plugins/translate/translate/services/: apertium.py  service.py  services.py  yandex.py
plugins/translate/translate/ui/: preferences.ui
plugins/wordcompletion/: Makefile.am  gedit-word-completion-plugin.c  gedit-wordcompletion.metainfo.xml.in  org.gnome.gedit.plugins.wordcompletion.gschema.xml.in.in
plugins/zeitgeist/: Makefile.am  gedit-zeitgeist-plugin.c  gedit-zeitgeist.metainfo.xml.in
po/: POTFILES.in  POTFILES.skip  ar.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  th.po  tr.po  uk.po  zh_CN.po
