if ENABLE_PYTHON
plugin_PYTHON += plugins/bracketcompletion/bracketcompletion.py
plugin_in_files += plugins/bracketcompletion/bracketcompletion.plugin.desktop.in
appstream_in_files += plugins/bracketcompletion/gedit-bracketcompletion.metainfo.xml.in
else
dist_plugin_in_files += plugins/bracketcompletion/bracketcompletion.plugin.desktop.in
dist_appstream_in_files += plugins/bracketcompletion/gedit-bracketcompletion.metainfo.xml.in
endif
