if ENABLE_PYTHON
plugin_PYTHON += plugins/codecomment/codecomment.py
plugin_in_files += plugins/codecomment/codecomment.plugin.desktop.in
appstream_in_files += plugins/codecomment/gedit-codecomment.metainfo.xml.in
else
dist_plugin_in_files += plugins/codecomment/codecomment.plugin.desktop.in
dist_appstream_in_files += plugins/codecomment/gedit-codecomment.metainfo.xml.in
endif
