if ENABLE_PYTHON
plugin_PYTHON +=				\
	plugins/colorpicker/colorpicker.py

plugin_in_files += plugins/colorpicker/colorpicker.plugin.desktop.in
else
dist_plugin_in_files += plugins/colorpicker/colorpicker.plugin.desktop.in
endif

appdata_in_files += plugins/colorpicker/gedit-colorpicker.metainfo.xml.in
