if ENABLE_PYTHON
plugin_PYTHON +=				\
	plugins/colorpicker/colorpicker.py

plugin_in_files += plugins/colorpicker/colorpicker.plugin.desktop.in
appstream_in_files += plugins/colorpicker/gedit-colorpicker.metainfo.xml.in
else
dist_plugin_in_files += plugins/colorpicker/colorpicker.plugin.desktop.in
dist_appstream_in_files += plugins/colorpicker/gedit-colorpicker.metainfo.xml.in
endif
