if ENABLE_PYTHON
plugin_PYTHON += plugins/joinlines/joinlines.py
plugin_in_files += plugins/joinlines/joinlines.plugin.desktop.in
appstream_in_files += plugins/joinlines/gedit-joinlines.metainfo.xml.in
else
dist_plugin_in_files += plugins/joinlines/joinlines.plugin.desktop.in
dist_appstream_in_files += plugins/joinlines/gedit-joinlines.metainfo.xml.in
endif
