if ENABLE_PYTHON
plugin_PYTHON += plugins/smartspaces/smartspaces.py
plugin_in_files += plugins/smartspaces/smartspaces.plugin.desktop.in
appstream_in_files += plugins/smartspaces/gedit-smartspaces.metainfo.xml.in
else
dist_plugin_in_files += plugins/smartspaces/smartspaces.plugin.desktop.in
dist_appstream_in_files += plugins/smartspaces/gedit-smartspaces.metainfo.xml.in
endif
